[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stripe-billing-mcp"
version = "0.1.0"
description = "Stripe Billing MCP server for AI agents — manage customers, subscriptions, invoices, and revenue metrics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MEOK AI Labs", email = "hello@meok.ai" },
]
keywords = ["mcp", "stripe", "billing", "ai-agents", "subscriptions", "invoices"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "stripe>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/meok-ai/stripe-billing-mcp"
Documentation = "https://github.com/meok-ai/stripe-billing-mcp#readme"
Repository = "https://github.com/meok-ai/stripe-billing-mcp"
Issues = "https://github.com/meok-ai/stripe-billing-mcp/issues"

[project.scripts]
stripe-billing-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
