[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stripe-billing-mcp"
version = "1.0.0"
description = "MEOK AI Labs — Manage Stripe billing operations from AI agents. Create customers, subscriptions,"
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "stripe", "payment-processing", "billing", "subscription-management", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/stripe-billing-mcp"
Documentation = "https://meok.ai/docs/stripe-billing-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/stripe-billing-mcp/issues"
