[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "stripe-billing-mcp"
version = "1.0.0"
description = "MEOK AI Labs — stripe-billing-mcp"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "meok", "ai"]
dependencies = ["mcp>=1.0.0"]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/stripe-billing-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]
